# cloud-agent

./: README.md  buildspec-agent.yml  dockerfile  pyproject.toml  requirements.txt  terraform.tfstate
assets/: AgentRuntimeRole.json  assume-role-policy.json  bac-cw-model-invoke-permiossion-policy.json  bac-cw-model-invoke-trust-relationship.json  rag_pipeline.json  simple-trust-policy.json  trust-policy.json
assets/ingest_lambda/: lambda_handler.py
assets/retrieve_lambda/: lambda_handler.py
config/: dynamic-config.yaml  static-config.yaml
docs/: COGNITO_AUTH_SETUP.md  JWT_INVOKE_ANALYSIS.md  ROADMAP.md  aws-strands-agent.drawio  notes.txt
modules/: bucket.tf  iam_role.tf  knowledge_base.tf  lambda_ingest.tf  lambda_retrieve.tf  opensearch.tf  output.tf  variables.tf  version.tf
src/: agent_client.py  agent_runtime.py
src/agents/: aws_cloudops_agent.py
src/components/: auth.py  buildspec.yml  conversation_manager.py  ecs-pipeline.yml  gateway.py  mcp.py  memory.py  rag_base_infra.yml  rag_pipeline.yml
src/ops/: deploy_memory.py  deploy_runtime.py  invoke_agent.py  invoke_agent_jwt.py
src/utils/: config.py  config_manager.py  config_validator.py  query_extractor.py  responses.py
